Add GitHub button to demo application

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">تبدیل عدد به حروف</string>
     <string name="number_input_hint">عدد</string>
+    <string name="github">گیت‌هاب</string>
 </resources>
