--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">تبدیل عدد به حروف</string>
     <string name="number_input_hint">عدد</string>
     <string name="github">گیت‌هاب</string>
+    <string name="github_issues">ایشوها در گیت‌هاب</string>
 </resources>
